<resources>
    <string name="app_name">TetaHomework1</string>
    <string name="action_movie">боевики</string>
    <string name="date">22.04.2021</string>
    <string name="title1">Гнев человеческий</string>
    <string name="movie_description">Эйч — загадочный и холодный на вид джентльмен, но внутри него пылает жажда справедливости. Преследуя свои мотивы, он внедряется в инкассаторскую компанию, чтобы выйти на соучастников серии многомиллионных ограблений, потрясших Лос-Анджелес. В этой запутанной игре у каждого своя роль, но под подозрением оказываются все. Виновных же обязательно постигнет гнев человеческий.</string>
    <string name="actors">Актеры</string>
    <string name="_18">18+</string>
    <string name="actor1_image">actor1 image</string>
    <string name="actor1_name">Джейсон Стэйтем</string>
    <string name="actor2_image">actor2 image</string>
    <string name="actor2_name">Холт Маккэллани</string>
    <string name="actor3_image">actor3 image</string>
    <string name="actor3_name">Джош Харнетт</string>
    <string name="popular_now">Популярное сейчас</string>
    <string name="drama">драма</string>
    <string name="comedy">комедии</string>
    <string name="arthouse">артхаус</string>
    <string name="melodrama">мелодрамы</string>
    <string name="main_empty_message">nothing here</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="movie_details">movie details</string>
    <string name="please_wait">please wait</string>
    <string name="exit">Выйти</string>
    <string name="tell_about_problem">Сообщить о проблеме</string>
    <string name="ask_question">Задать вопрос</string>
    <string name="app">Приложение</string>
    <string name="data_and_memory">Данные и память</string>
    <string name="language">Язык</string>
    <string name="theme">Тема</string>
    <string name="confidelity">Конфиденциальность</string>
    <string name="notifications_and_sounds">Уведомления и звуки</string>
    <string name="settings">Настройки</string>
    <string name="phone">Телефон</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="name">Имя</string>
    <string name="personal_data">Личные данные</string>
    <string name="interests">Интересы</string>
    <string name="email_example">konst.89@mail.com</string>
    <string name="kostya">Константин</string>
    <string name="main">main</string>
    <string name="channel_name">notification_channel</string>
    <string name="channel_description">description</string>
    <string name="msg_token_fmt">msg_token_fmt</string>
    <string name="plus">+</string>
</resources>