<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_graph"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/home"
        android:label="@string/home"
        android:name="ru.avtoropova.tetahomework1.view.fragments.MoviesListFragment">
        <action
            android:id="@+id/action_home_to_movieDetailsFragment"
            app:destination="@id/movieDetails">
        </action>
    </fragment>
    <fragment
        android:id="@+id/profile"
        android:label="@string/profile"
        android:name="ru.avtoropova.tetahomework1.view.fragments.ProfileFragment"></fragment>
    <fragment
        android:id="@+id/movieDetails"
        android:label="@string/movie_details"
        android:name="ru.avtoropova.tetahomework1.view.fragments.MovieDetailsFragment">
        <argument
            android:name="movieArg"
            app:argType="ru.avtoropova.tetahomework1.model.dto.MovieDto" />
    </fragment>

</navigation>