<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:src="@drawable/movie_poster"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:elevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.75"
        app:cardBackgroundColor="@color/card_bg"

        app:cardCornerRadius="30dp"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_movie_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/tag_border"
                    android:text="@string/action_movie"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="10sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="34dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_movie_tag"
                    android:layout_marginStart="10dp" />

                <TextView
                    android:id="@+id/tv_movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_movie_tag"
                    android:text="@string/title1"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/text_color"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_star_black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />

                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_star_black"
                    app:layout_constraintStart_toStartOf="@id/star1"
                    app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />

                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_star_black"
                    app:layout_constraintStart_toStartOf="@id/star2"
                    app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />

                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_star_black"
                    app:layout_constraintStart_toStartOf="@id/star3"
                    app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />

                <ImageView
                    android:id="@+id/star5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_star_white"
                    app:layout_constraintStart_toStartOf="@id/star4"
                    app:layout_constraintTop_toBottomOf="@id/tv_movie_title" />

                <TextView
                    android:id="@+id/tv_movie_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/star1"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="30dp"
                    android:textSize="14sp"
                    android:textColor="@color/text_color"
                    android:text="@string/movie_description" />

                <TextView
                    android:id="@+id/tv_actors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_movie_description"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/actors"
                    android:textSize="16sp"
                    android:textColor="@color/text_color"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_age_restriction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/age_border"
                    android:text="@string/_18"
                    android:textColor="@color/black"
                    android:textSize="13.8sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_actors">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_actor1"
                            android:layout_width="wrap_content"
                            android:layout_height="196dp"
                            android:src="@drawable/actor1"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="12dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:contentDescription="@string/actor1_name" />

                        <TextView
                            android:id="@+id/tv_actor1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/actor1_name"
                            android:textStyle="bold"
                            android:textColor="@color/text_color"
                            android:textSize="12sp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/iv_actor1" />

                        <ImageView
                            android:id="@+id/iv_actor2"
                            android:layout_width="wrap_content"
                            android:layout_height="196dp"
                            android:src="@drawable/actor2"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginBottom="12dp"
                            app:layout_constraintStart_toEndOf="@id/iv_actor1"
                            app:layout_constraintTop_toTopOf="parent"
                            android:contentDescription="@string/actor2_image" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/actor2_name"
                            android:textStyle="bold"
                            android:textColor="@color/text_color"
                            android:textSize="12sp"
                            android:layout_marginTop="10dp"
                            app:layout_constraintStart_toStartOf="@id/iv_actor2"
                            app:layout_constraintTop_toBottomOf="@id/iv_actor2" />

                        <ImageView
                            android:id="@+id/iv_actor3"
                            android:layout_width="wrap_content"
                            android:layout_height="196dp"
                            android:src="@drawable/actor3"
                            android:layout_marginBottom="12dp"
                            android:layout_marginStart="10dp"
                            app:layout_constraintStart_toEndOf="@id/iv_actor2"
                            app:layout_constraintTop_toTopOf="parent"
                            android:contentDescription="@string/actor3_image" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/actor3_name"
                            android:textStyle="bold"
                            android:textColor="@color/text_color"
                            android:textSize="12sp"
                            android:layout_marginTop="10dp"
                            app:layout_constraintStart_toStartOf="@id/iv_actor3"
                            app:layout_constraintTop_toBottomOf="@id/iv_actor3" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </HorizontalScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
